Primal Crusher and Refinement (I want to die)

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,1 +1,4 @@
 public-f net.minecraft.item.SwordItem field_234810_b_ # attributeModifiers
+public net.minecraft.item.PickaxeItem field_150915_c # EFFECTIVE_ON
+public net.minecraft.item.ShovelItem field_150916_c # EFFECTIVE_ON
+public net.minecraft.item.AxeItem field_150917_d_ # EFFECTIVE_ON_BLOCKS
