--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -3,3 +3,4 @@ public net.minecraft.item.PickaxeItem field_150915_c # EFFECTIVE_ON
 public net.minecraft.item.ShovelItem field_150916_c # EFFECTIVE_ON
 public net.minecraft.item.AxeItem field_150917_d_ # EFFECTIVE_ON_BLOCKS
 public net.minecraft.world.server.ChunkManager func_223491_f()Ljava/lang/Iterable; # getLoadedChunksIterable
+public net.minecraft.world.chunk.Chunk field_76643_l # dirty
